--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,18 @@
   </properties>
   
 <distributionManagement>
+  
   <repository>
-         <id>internal.repo</id>
-         <name>Internal repo</name>
-         <url>file:///var/lib/jenkins/myartifacts/</url>
-</repository>
+    <id>releases</id>
+    <!-- CHANGE HERE by your team nexus server -->
+    <url>http://54.205.208.26:8081/repository/maven-releases/</url>
+  </repository>
+  <snapshotRepository>
+    <id>snapshots</id>
+    <!-- CHANGE HERE by your team nexus server -->
+    <url> http://54.205.208.26:8081/repository/maven-snapshots/</url>
+   </snapshotRepository>
+   
 </distributionManagement>
 
   <dependencies>
